WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86589
[Chromium] WebTransformationMatrixTest.verifyDefaultConstructorCreatesIdentityMatrix is failing
https://bugs.webkit.org/show_bug.cgi?id=86589
Summary
[Chromium] WebTransformationMatrixTest.verifyDefaultConstructorCreatesIdentit...
Kenichi Ishibashi
Reported
2012-05-16 00:42:27 PDT
The test didn't complete all platform.
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Win%20%28dbg%29%281%29/builds/12336
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Mac10.5%20%28dbg%29%281%29/builds/7239
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Linux%20%28dbg%29/builds/6817
Attachments
Patch
(3.22 KB, patch)
2012-05-16 02:18 PDT
,
Kenichi Ishibashi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenichi Ishibashi
Comment 1
2012-05-16 02:18:31 PDT
Created
attachment 142202
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-16 02:20:53 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
Kenichi Ishibashi
Comment 3
2012-05-16 02:22:26 PDT
The failure is caused by the assertion at WebPrivateOwnPtr::~WebPrivateOwnPtr(). Kent-san, could you take a look?
Kent Tamura
Comment 4
2012-05-16 02:57:25 PDT
Comment on
attachment 142202
[details]
Patch ok
Kenichi Ishibashi
Comment 5
2012-05-16 03:13:33 PDT
(In reply to
comment #4
)
> (From update of
attachment 142202
[details]
) > ok
Thanks!
WebKit Review Bot
Comment 6
2012-05-16 04:19:38 PDT
Comment on
attachment 142202
[details]
Patch Clearing flags on attachment: 142202 Committed
r117257
: <
http://trac.webkit.org/changeset/117257
>
WebKit Review Bot
Comment 7
2012-05-16 04:19:44 PDT
All reviewed patches have been landed. Closing bug.
Shawn Singh
Comment 8
2012-05-16 08:40:34 PDT
Thank you for fixing this, I apologize you had to do it on my behalf
James Robinson
Comment 9
2012-05-16 11:20:33 PDT
Comment on
attachment 142202
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=142202&action=review
> Source/Platform/chromium/public/WebTransformationMatrix.h:54 > + ~WebTransformationMatrix();
we typically have this declared inline and call a exported reset() function. this class is still in a bit of flux, though (it doesn't have proper exports yet, for instance)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug