[Chromium] WebTransformationMatrixTest.verifyDefaultConstructorCreatesIdentityMatrix is failing https://bugs.webkit.org/show_bug.cgi?id=86589

Reviewed by Kent Tamura.

Source/Platform:

* chromium/public/WebTransformationMatrix.h: Added destructor.
(WebTransformationMatrix):

Source/WebCore:

Need to call m_private.reset(0) before destructing WebTransformationMatrix objects.

No new tests. WebTransformationMatrixTest should pass on debug build.

* platform/chromium/support/WebTransformationMatrix.cpp:
(WebKit::WebTransformationMatrix::~WebTransformationMatrix):
(WebKit):


Canonical link: https://commits.webkit.org/104189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117257 268f45cc-cd09-0410-ab3c-d52691b4dbfc